# reda-gds

./: .gitignore  Cargo.toml  README.md
data/: cell_err.gds
data/leafcell/: bitcell.gds  column_tri_gate.gds  precharge.gds
data/sram/: sram_1rw0r0w_8_256_freepdk45.gds
examples/: cell.rs  err.rs  leafcell.rs  sram.rs  text.rs
src/: lib.rs  library.rs
src/io/: mod.rs  record.rs
src/io/read/: error.rs  mod.rs
src/io/write/: binary.rs  error.rs  mod.rs  text.rs
src/models/: aref.rs  boundary.rs  boxx.rs  mod.rs  node.rs  path.rs  sref.rs  structure.rs  text.rs
src/models/primitive/: mod.rs  presentation.rs  transform.rs
